Part_2-ML_Serving_Framework/4-E2E_Test_with_Trytune/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: trytune
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: trytune
---
apiVersion: v1
kind: Service
metadata:
  name: triton
spec:
  type: NodePort
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  selector:
    app: triton
